<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.phonepe.dataplatform</groupId>
    <artifactId>fabric-foxtrot-ingestion</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <fabric.version>1.0.0-SNAPSHOT</fabric.version>
        <lombok.version>1.16.6</lombok.version>
        <foxtrot.client.version>0.2.4-SNAPSHOT</foxtrot.client.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.olacabs.fabric</groupId>
            <artifactId>fabric-compute-framework</artifactId>
            <version>${fabric.version}</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.3.1</version>
        </dependency>

        <dependency>
            <groupId>com.phonepe.models</groupId>
            <artifactId>phonepe-model</artifactId>
            <version>1.0-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>*</groupId>
                    <artifactId>*</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.flipkart.foxtrot</groupId>
            <artifactId>foxtrot-client</artifactId>
            <version>${foxtrot.client.version}</version>
        </dependency>

    </dependencies>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <source>1.8</source>
                        <target>1.8</target>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.4.2</version>
                <configuration>
                    <createDependencyReducedPom>true</createDependencyReducedPom>
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/*.SF</exclude>
                                <exclude>META-INF/*.DSA</exclude>
                                <exclude>META-INF/*.RSA</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <transformers>
                                <transformer
                                        implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>phonepe-releases</id>
            <name>releases</name>
            <url>http://artifactory.phonepe.com/content/repositories/releases</url>
        </repository>
        <repository>
            <id>phonepe-snapshots</id>
            <name>snapshots</name>
            <url>http://artifactory.phonepe.com/content/repositories/snapshots</url>
        </repository>
    </repositories>

    <pluginRepositories>
        <pluginRepository>
            <id>phonepe-releases</id>
            <name>releases</name>
            <url>http://artifactory.phonepe.com/content/repositories/releases</url>
        </pluginRepository>
        <pluginRepository>
            <id>phonepe-snapshots</id>
            <name>snapshots</name>
            <url>http://artifactory.phonepe.com/content/repositories/snapshots</url>
        </pluginRepository>
    </pluginRepositories>

    <distributionManagement>
        <repository>
            <id>phonepe-releases</id>
            <name>releases</name>
            <url>http://artifactory.phonepe.com/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>phonepe-snapshots</id>
            <name>snapshots</name>
            <url>http://artifactory.phonepe.com/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

</project>